--- a/app/src/main/res/layout/fragment_music_list.xml
+++ b/app/src/main/res/layout/fragment_music_list.xml
@@ -16,7 +16,8 @@
         android:layout_gravity="bottom"
         android:layout_marginBottom="55dp"
         android:layout_marginRight="24dp"
-        android:background="@color/white_e">
+        android:background="@color/white_e"
+        android:visibility="gone">
 
         <View
             android:layout_width="match_parent"
@@ -40,9 +41,9 @@
             android:layout_width="80dp"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
-            android:layout_marginBottom="10dp"
             android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
+            android:layout_marginBottom="10dp"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
             android:layout_toLeftOf="@+id/tvCode"
